--- a/staticAssets/index.html
+++ b/staticAssets/index.html
@@ -4,13 +4,14 @@
         <meta charset="utf-8">
         <title></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Place favicon.ico in the root directory -->
-        <!-- <link rel="stylesheet" href="stylesheets/main.css"> -->
-        
+        <link rel="stylesheet" href="./staticAssets/stylesheets/style.css">
         <script src='./staticAssets/scripts/script.js'></script>
+        <link href='./staticAssets/images'>
     </head>
     <body>    
-        <p>Longest Fence</p>
-        <div id='images'></div>
+        
+        <!-- <div id='marker'>|</div> -->
+        <div id='images'><span id='lead'></span></div>
+        <p>World's Longest Fence</p>
     </body>
 </html>
