--- a/staticAssets/index.html
+++ b/staticAssets/index.html
@@ -5,13 +5,13 @@
         <title></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./staticAssets/stylesheets/style.css">
-        <script src='./staticAssets/scripts/script.js'></script>
+        <script src='./staticAssets/scripts/bundle.js'></script>
         <link href='./staticAssets/images'>
     </head>
     <body>    
-        
-        <!-- <div id='marker'>|</div> -->
-        <div id='images'><span id='lead'></span></div>
         <p>World's Longest Fence</p>
+        <div id='images'><span id='lead'></span></div>
+        <div id='marker'>|</div>
+        <div id='globe'></div>
     </body>
 </html>
