--- a/staticAssets/index.html
+++ b/staticAssets/index.html
@@ -2,26 +2,25 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>Responsive Grid</title>
+        <title>FEEEEEEENCE</title>
+        <link rel="icon" href="data:;base64,iVBORw0KGgo=">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel='stylesheet' href='/staticAssets/stylesheets/style.css'>
-        <script src='/staticAssets/scripts/preload.js'></script>
+        <link rel='stylesheet' href='/stylesheets/style.css'>
+        <script src='/scripts/preload.js'></script>
     </head>
     <body>
-    	<div id='header'>
-            <div id='search'>
-                <input placeholder="Search Country"></input>
-            </div>
+        <div id='header'>
+            <input placeholder="search country"></input>
+            <button id='add'>+</button>
+            <button id='substract'>-</button>
+            <div id='title'>THE WORLD'S LONGEST FENCE</div>
         </div>
-    	<div id='container'>
-    		<div id='fences'></div>
+
+        <div id='container'>
+            <div id='fences'></div>
     	</div>
-    	<div id='menu'>
-            <div id='controls'>
-                <button id='add'>+</button>
-                <button id='substract'>-</button>
-            </div>
-        </div>
-        <script src='/staticAssets/scripts/bundle.js'></script>
+
+    	<div id='about'>about</div>
+        <script src='/scripts/preload.js'></script>
     </body>
 </html>
