--- a/staticAssets/index.html
+++ b/staticAssets/index.html
@@ -6,7 +6,6 @@
         <link rel="icon" href="data:;base64,iVBORw0KGgo=">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' href='/stylesheets/style.css'>
-        <script src='/scripts/preload.js'></script>
     </head>
     <body>
         <div id='header'>
@@ -21,6 +20,6 @@
     	</div>
 
     	<div id='about'>about</div>
-        <script src='/scripts/preload.js'></script>
+        <script src='/scripts/bundle.js'></script>
     </body>
 </html>
