--- a/staticAssets/index.html
+++ b/staticAssets/index.html
@@ -20,6 +20,6 @@
     	</div>
 
     	<div id='about'>about</div>
-        <script src='/scripts/view.js'></script>
+        <script src='/scripts/bundle.js'></script>
     </body>
 </html>
