about section added

--- a/staticAssets/index.html
+++ b/staticAssets/index.html
@@ -19,7 +19,14 @@
             <div id='fences'></div>
     	</div>
 
-    	<div id='about'>about</div>
+    	<div id='about'>
+            about   </br></br></br>
+
+            <p>
+                1 fence, 196 countries, 0 barriers</br>
+                This project is a symbolic exploration of global division and connection.
+            </p>
+        </div>
         <script src='/scripts/bundle.js'></script>
     </body>
 </html>
