--- a/staticAssets/index.html
+++ b/staticAssets/index.html
@@ -10,8 +10,8 @@
     <body>
         <div id='header'>
             <input placeholder="search country"></input>
-            <div id='add'>+</div>
-            <div id='substract'>-</div>
+            <div><img id='add' src='/images/add.png'/></div>
+            <div><img id='sub' src='/images/sub.png'/></div>
         </div>
 
         <div id='title'>The World's Longest Fence</div>
