just infinite scroll

--- a/staticAssets/index.html
+++ b/staticAssets/index.html
@@ -8,27 +8,24 @@
         <link rel='stylesheet' href='/stylesheets/style.css'>
     </head>
     <body>
-        <div id='header'>
-            <input placeholder="search country"></input>
-            <div><img id='add' src='/images/add.png'/></div>
-            <div><img id='sub' src='/images/sub.png'/></div>
-        </div>
 
-        <div id='title'>The World's Longest Fence</div>
+        <div id='title'>ONE HUNDRED NINETY SIX COUNTRIES AND ONE FENCE</div>
 
         <div id='container'>
             <div id='fences'></div>
+            <div id='description'>
+                <span id="firstImg"> </span>
+                <span id="secondImg"> </span>
+                <span id="thirdImg"> </span>
+                <span id="fourthImg"> </span>
+                <span id="fifthImg"> </span>
+                <span id="sixthImg"> </span>
+                <span id="seventhImg"> </span>
+            </div>
     	</div>
 
-        <img id='marker' src='./images/middle.png'/>
 
-    	<div id='about'>about</br></br></br>
 
-            <p>
-                1 fence, 196 countries, 0 barriers</br>
-                This project is a symbolic exploration of global division and connection.
-            </p>
-        </div>
         <script src='/scripts/bundle.js'></script>
     </body>
 </html>
